<resources>
    <string name="app_name">Bushido</string>
    <string name="default_web_client_id" translatable="false">191109621999-tgq3ra2l80spknohkn8ncsctnluv69jj.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Presentación</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="perfil">Perfil</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="por_favor_ingresa_un_correo_valido">Por favor, ingresa un correo válido</string>
    <string name="por_favor_completa_todos_los_campos">Por favor, completa todos los campos</string>
    <string name="usuario_sin_nombre">Usuario sin nombre</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="por_favor_inicia_sesion_o_registrate">Por favor, inicia sesión o regístrate</string>
    <string name="error_al_autenticar_con_google">Error al autenticar con Google</string>
    <string name="inicio">Inicio</string>
    <string name="padel_tenis">Pádel/Tenis</string>
    <string name="tenis_tierra">Tenis en tierra</string>
    <string name="bolos">Bolos</string>
    <string name="precios">Precios</string>
    <string name="quieres_saber_m_s_de_nosotros">¿QUIERES SABER MÁS DE NOSOTROS?</string>
    <string name="nombre">Nombre</string>
    <string name="apelidos">Apellidos</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="introduce_tu_fecha_de_nacimiento">Introduce tu fecha de nacimiento</string>
    <string name="guardar">Guardar</string>
    <string name="consulta_precios">¡CONSULTA PRECIOS!</string>
    <string name="reservar_pista">RESERVAR PISTA</string>
    <string name="quienes_somos">¿Quiénes somos?</string>
    <string name="hazte_socio">¡HAZTE SOCIO!</string>
    <string name="telefono">Teléfono</string>
    <string name="administrador">Administrador</string>
    <string name="un_centro_de_ocio_pensado_para_disfrutar_en_familia_o_con_amigos_ofrecemos_diversi_n_deporte_y_relax_en_instalaciones_modernas_y_seguras">
Un centro de ocio pensado para disfrutar en familia o con amigos. Ofrecemos diversión, deporte y relax en instalaciones modernas y seguras.
</string>
    <string name="pistas_profesionales_para_jugar_entrenar_o_competir">Pistas profesionales para jugar, entrenar o competir.</string>
    <string name="pistas_automatizadas_con_ambiente_animado_y_zona_de_snacks">Pistas automatizadas con ambiente animado y zona de snacks.</string>
    <string name="usuario_no_encontrado">Usuario no encontrado</string>
    <string name="error_al_obtener_usuario">Error al obtener usuario</string>
    <string name="id_no_disponible">ID no disponible</string>
    <string name="usuarios">Usuarios</string>
    <string name="nombre_no_disponible">Nombre no disponible</string>
    <string name="que_no_te_lo_cuenten_reserva_ya">¡¡QUE NO TE LO CUENTEN, RESERVA YA!!</string>
    <string name="pistas_cubiertas_que_la_lluvia_no_te_impida_hacer_deporte">Pistas cubiertas, que la lluvia no te impida hacer deporte</string>
    <string name="abono_ma_anas">Abono Mañanas</string>
    <string name="pareja_15_matricula">PAREJA (15 MATRÍCULA)</string>
    <string name="abono_pareja">Abono Pareja</string>
    <string name="abono">Abono</string>
    <string name="individuales_15_matricula">INDIVIDUALES (15 MATRÍCULA)</string>
    <string name="familiar_15_matricula">FAMILIAR (15 MATRÍCULA)</string>
    <string name="socio">Socio</string>
    <string name="invitado">Invitado</string>
    <string name="padel_1h">PADEL 1H</string>
    <string name="tenis_1h">TENIS 1H</string>
    <string name="invitado_tierra_batida">Invitado tierra batida</string>
    <string name="socio_tierra_batida">Socio tierra batida</string>
    <string name="precio_bolos">Precio Bolos</string>
    <string name="bolos_precio_por_partida">BOLOS PRECIO POR PARTIDA</string>
    <string name="subir_fotos_a_bolos">SUBIR FOTOS A BOLOS</string>
    <string name="subir_precios_bolos">SUBIR PRECIOS BOLOS</string>
    <string name="precios_bolos">PRECIOS BOLOS</string>
    <string name="precios_padel_tenis">PRECIOS PADEL/TENIS</string>
    <string name="precios_socios">PRECIOS SOCIOS</string>
    <string name="padel">Padel</string>
    <string name="tenis">Tenis</string>
    <string name="subir_fotos_tenis">SUBIR FOTOS TENIS</string>
    <string name="subir_fotos_padel">SUBIR FOTOS PADEL</string>
    <string name="subir_precios_tenis_padel">SUBIR PRECIOS TENIS/PADEL</string>
    <string name="subir_fotos_tenis_padel">SUBIR FOTOS TENIS/PADEL</string>
    <string name="subir_precios_socios">SUBIR PRECIOS SOCIOS</string>
    <string name="subir_fotos_socios">SUBIR FOTOS SOCIOS</string>
    <string name="pareja">PAREJA</string>
    <string name="individuales">INDIVIDUALES</string>
    <string name="familiar">FAMILIAR</string>
    <string name="familiar_hasta_4_personas_ni_os_21_a_os">Familiar hasta 4 personas (niños 21 años)</string>
    <string name="subir_fotos_home">SUBIR FOTOS HOME</string>
    <string name="correo">Correo</string>
    <string name="precios_gimnasio">PRECIOS GIMNASIO</string>
    <string name="a_adir_admin">AÑADIR ADMIN</string>
    <string name="a_adir_usuario">AÑADIR USUARIO</string>
    <string name="lista_de_reservas">Lista de Reservas</string>
    <string name="pista">Pista </string>
    <string name="precio">Precio</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="pista_numero">Pista: %1$s</string>
    <string name="fecha_reserva">Fecha: %1$s</string>
    <string name="hora_reserva">Hora: %1$s</string>
    <string name="precio_reserva">Precio: %1$s</string>
    <string name="pistas_de_padel">PISTAS DE PADEL</string>
    <string name="pistas_de_tenis">PISTAS DE TENIS</string>
    <string name="pista_de_tierra_batida">Pista de tierra batida:</string>
    <string name="pista_4">PISTA 4</string>
    <string name="pista_3">PISTA 3</string>
    <string name="pista_1">PISTA 1</string>
    <string name="pista_2">PISTA 2</string>
    <string name="pista_5">PISTA 5</string>
    <string name="pista_6">PISTA 6</string>
    <string name="pista_7">PISTA 7</string>
    <string name="pista_8">PISTA 8</string>
    <string name="pista_9">PISTA 9</string>
    <string name="introduce_correo_y_contrase_a_para_a_adir_un_usuario_o_administrador">Introduce correo y contraseña para añadir un usuario o un administrador</string>
    <string name="precios_pistas">Precios Pistas</string>
    <string name="reservas_pista_de_bolos">Reservas Pista de Bolos</string>
    <string name="reserva_pista_de_tenis_y_padel">Reserva Pista de Tenis y Padel</string>
    <string name="tipo">Tipo</string>
    <string name="ver_usuarios">VER USUARIOS</string>
    <string name="ver_reservas">VER RESERVAS</string>
    <string name="introduce_el_nombre_o_correo_del_usuario">Introduce el nombre/correo</string>
    <string name="ajustes">Ajustes</string>
    <string name="espa_ol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="entar">Entrar</string>
    <string name="demuestra_que_eres_el_mejor_y_haz_un_pleno">¡¡DEMUESTRA QUE ERES EL MEJOR Y HAZ UN PLENO!!</string>
    <string name="ver_reservas_futuras">Ver reservas futuras</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="no_hay_reservas_futuras">No hay reservas futuras</string>
    <string name="cerrar">Cerrar</string>
    <string name="titulo_opciones_usuario">Opciones para %1$s</string>
    <string name="reservas_usuario">Reservas de %1$s</string>
    <string name="error_al_cargar_reservas">Error al cargar reservas</string>
    <string name="est_s_seguro_de_que_quieres_eliminar_al_usuario">¿Estás seguro de que quieres eliminar al usuario %1$s?</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="usuario_eliminado">Usuario eliminado</string>
    <string name="error_al_eliminar">Error al eliminar</string>
    <string name="eliminar_reserva">Eliminar reserva</string>
    <string name="deseas_eliminar_esta_reserva">¿Deseas eliminar esta reserva?</string>
    <string name="foto_cancelada">Foto cancelada</string>
    <string name="precios_actualizados">Precios actualizados</string>
    <string name="error_al_actualizar_precios">Error al actualizar precios</string>
    <string name="completa_ambos_campos">Completa ambos campos</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="elegir_de_galer_a">Elegir de galería</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="imagen_subida_con_xito">Imagen subida con éxito</string>
    <string name="error_al_subir_imagen">Error al subir imagen</string>
    <string name="admin_a_adido_correctamente">Admin añadido correctamente</string>
    <string name="error_al_guardar_en_firestore">Error al guardar en Firestore: %1$s</string>
    <string name="error_al_crear_usuario">Error al crear usuario: %1$s</string>
    <string name="introduce_un_correo_y_una_contrase_a">Introduce un correo y una contraseña</string>
    <string name="usuario_normal_a_adido_correctamente">Usuario normal añadido correctamente</string>
    <string name="error_al_cargar_precios">Error al cargar precios</string>
    <string name="precios_guardados">Precios guardados</string>
    <string name="error_al_guardar">Error al guardar</string>
    <string name="completa_todos_los_campos">Completa todos los campos</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="reserva_eliminada">Reserva eliminada</string>
    <string name="no_hay_im_genes_en_fotosbolos">No hay imágenes en FotosBolos</string>
    <string name="error_al_obtener_url">Error al obtener URL</string>
    <string name="error_accediendo_a_firebase">Error accediendo a Firebase</string>
    <string name="no_hay_im_genes_para_descargar">No hay imágenes para descargar</string>
    <string name="imagenes_guardadas">Se han guardado %1$d imágenes</string>
    <string name="error_al_obtener_documento">Error al obtener documento</string>
    <string name="datos_cargados_socio_invitado">Datos cargados: socio=%1$s, invitado=%2$s</string>
    <string name="documento_no_existe_o_es_null">Documento no existe o es null</string>
    <string name="la_pista_seleccionada_est_ocupada_a_esa_hora">La pista seleccionada está ocupada a esa hora</string>
    <string name="esa_pista_ya_est_ocupada_a_esa_hora">Esa pista ya está ocupada a esa hora</string>
    <string name="ya_tienes_una_reserva_a_esa_hora">Ya tienes una reserva a esa hora</string>
    <string name="no_se_pudo_obtener_un_precio_v_lido">No se pudo obtener un precio válido</string>
    <string name="reserva_realizada_correctamente">Reserva realizada correctamente</string>
    <string name="error_al_guardar_la_reserva">Error al guardar la reserva</string>
    <string name="error_al_obtener_el_precio">Error al obtener el precio</string>
    <string name="error_al_verificar_reservas_del_usuario">Error al verificar reservas del usuario</string>
    <string name="error_al_verificar_bloqueos">Error al verificar bloqueos</string>
    <string name="notificaciones_de_reservas_realizadas">Notificaciones de reservas realizadas</string>
    <string name="reserva_realizada">Reserva realizada</string>
</resources>