<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bushido.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_homeInfo"
        android:name="com.example.bushido.ui.home.HomeInfoFragment"
        android:label="@string/quienes_somos"
        tools:layout="@layout/fragment_infohome" />

    <fragment
        android:id="@+id/nav_homePrecios"
        android:name="com.example.bushido.ui.home.HomePreciosFragment"
        android:label="@string/hazte_socio"
        tools:layout="@layout/fragment_precioshome" />


    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.bushido.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_padel_tenis"
        android:name="com.example.bushido.ui.padel_tenis.Padel_tenisFragment"
        android:label="@string/padel_tenis"
        tools:layout="@layout/fragment_padel_tenis" />

    <fragment
        android:id="@+id/nav_precios_padel_tenis"
        android:name="com.example.bushido.ui.padel_tenis.Padel_tenisPreciosFragment"
        android:label="@string/precios_pistas"
        tools:layout="@layout/fragment_precio_padel_tenis" />

    <fragment
        android:id="@+id/nav_reservas_padel_tenis"
        android:name="com.example.bushido.ui.padel_tenis.Padel_TenisReservasFragment"
        android:label="@string/reserva_pista_de_tenis_y_padel"
        tools:layout="@layout/fragment_padel_tenis_reservas" />

    <fragment
        android:id="@+id/nav_bolos"
        android:name="com.example.bushido.ui.bolos.BolosFragment"
        android:label="@string/bolos"
        tools:layout="@layout/fragment_bolos" />

    <fragment
        android:id="@+id/nav_precios_bolos"
        android:name="com.example.bushido.ui.bolos.BolosPreciosFragment"
        android:label="@string/precio_bolos"
        tools:layout="@layout/fragment_precio_bolos" />

    <fragment
        android:id="@+id/nav_reservas_bolos"
        android:name="com.example.bushido.ui.bolos.BolosReservasFragment"
        android:label="@string/reservas_pista_de_bolos"
        tools:layout="@layout/fragment_bolos_reservas" />

    <fragment
        android:id="@+id/nav_listaReservas"
        android:name="com.example.bushido.ui.reservasLista.ListaReservasFragment"
        android:label="@string/lista_de_reservas"
        tools:layout="@layout/fragment_lista_reservas" />


    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.bushido.ui.admin.AdminFragment"
        android:label="Administrador"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/nav_admin_Bolos"
        android:name="com.example.bushido.ui.admin.AdminBolosFragment"
        android:label="¡CAMBIAR PRECIOS BOLOS"
        tools:layout="@layout/fragment_admin_bolos" />

    <fragment
        android:id="@+id/nav_admin_TenisPadel"
        android:name="com.example.bushido.ui.admin.AdminTenisPadelFragment"
        android:label="¡CAMBIAR TENIS Y PADEL!"
        tools:layout="@layout/fragment_admin_tenis_padel" />

    <fragment
        android:id="@+id/nav_admin_Socios"
        android:name="com.example.bushido.ui.admin.AdminHomeFragment"
        android:label="¡CAMBIAR PRECIOS SOCIOS!"
        tools:layout="@layout/fragment_admin_home" />



</navigation>