<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_padel_tenis"
            android:icon="@drawable/padel_tenis"
            android:title="@string/padel_tenis" />

        <item
            android:id="@+id/nav_bolos"
            android:icon="@drawable/bolos"
            android:title="@string/bolos" />
    </group>
</menu>