<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.padel_tenis.Padel_TenisReservasFragment">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="412dp"
        android:layout_height="734dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/precios"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transparentContainer"
        android:layout_width="411dp"
        android:layout_height="734dp"
        android:background="#C4FFFFFF"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/tvPadel"
            android:layout_width="232dp"
            android:layout_height="45dp"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pistas_de_padel"
            android:textColor="@color/AzulTexto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_4"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_3"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_1"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_2"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_5"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista6"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_6"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />


        <TextView
            android:id="@+id/tvTenis"
            android:layout_width="232dp"
            android:layout_height="45dp"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pistas_de_tenis"
            android:textColor="@color/AzulTexto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.429" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista7"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_7"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista8"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_8"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />


        <TextView
            android:id="@+id/tvTenisTierra"
            android:layout_width="232dp"
            android:layout_height="57dp"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_de_tierra_batida"
            android:textColor="@color/AzulTexto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.596" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPista9"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/pista_9"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaReserva"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="311dp"
            android:layout_height="80dp"
            android:hint="@string/fecha"
            android:textColorHint="@color/AzulTexto"
            app:boxStrokeColor="@color/AzulTexto"
            app:hintTextColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.743"
            app:startIconDrawable="@drawable/calendar"
            app:startIconTint="@color/AzulTexto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:fontFamily="@font/russoone_regular"
                android:textColor="@color/AzulTexto"
                android:textColorHighlight="@color/AzulTexto"
                android:textColorHint="@color/AzulTexto" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerHoras"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:popupBackground="@color/white"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.82" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReservarPistaPadelTenis"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russoone_regular"
            android:text="@string/reservar_pista"
            android:textColor="@color/AzulTexto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.913"
            app:strokeColor="@color/AzulTexto"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>